syntax = "proto3";

option go_package = "github.com/go-clarum/agent/api/cmd";

service CmdService {
  rpc InitEndpoint(InitEndpointRequest) returns (InitEndpointResponse) {}
  rpc ShutdownEndpoint(ShutdownEndpointRequest) returns (ShutdownEndpointResponse) {}
}

message InitEndpointRequest {
  string name = 1;
  int32 warmup_millis = 2;
  repeated string cmd_components = 3;
}
message InitEndpointResponse {
  string error = 1;
}

message ShutdownEndpointRequest {
  string name = 1;
}
message ShutdownEndpointResponse {
  string error = 1;
}
